--- a/style.css
+++ b/style.css
@@ -1,10 +1,106 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;900&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #ffffff;
+  background-color: #e4d2f9;
+  font-family: "Inter", sans-serif;
+}
+
+.list-item-inline {
+    display: inline;
+}
+
+.container {
+  width: 90%;
+  max-width: 650px;
+  margin: 2rem auto;
+  padding: 1.5rem;
+  color: #421d6e;
+  /* border-radius: 50px; */
+  box-shadow: -20px 20px 60px #c2b3d4, 20px -20px 60px #fff2ff;
+}
+
+.title {
+  padding: 1rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.input-label {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.input {
+  padding: 0.3rem;
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid #421d6e;
+}
+
+.check-btn {
+  display: block;
+  margin: 1.5rem auto;
+  padding: 0.6rem;
+  background-color: #c2b3d4;
+  color: #421d6e;
+  border: 2px solid #421d6e;
+  border-radius: 0.5rem;
+  font-size: medium;
+  text-align: center;
+}
+
+.check-btn:hover,
+.check-btn:focus {
+  background-color: #421d6e;
+  color: #e4d2f9;
+}
+
+.message-area {
+  text-align: center;
+  font-weight: bold;
+}
+
+footer {
+    background-color: #e4d2f9;
+    box-shadow: -20px 20px 60px #c2b3d4, 20px -20px 60px #fff2ff;
+    color: #421d6e;
+    max-width: 650px;
+    margin: auto;
+    padding: .5rem;
+    border-radius: .1rem .1rem 0 0;
+}
+
+.footer-header {
+    margin: 1rem auto;
+    max-width: 600px;
+    text-align: center;
+
+}
+
+footer ul {
+    max-width: 600px;
+    margin: 1rem auto;
+    text-align: center;
+    list-style: none;
+}
+
+footer ul li {
+    margin: auto .3rem;
+}
+
+footer .img {
+    max-width: 2rem;
 }
